add auto generated annotation to entity